RESOLVED FIXED118337
Don't set z-index: 0 on lots of elements with -webkit-overflow-scrolling: touch
https://bugs.webkit.org/show_bug.cgi?id=118337
Summary Don't set z-index: 0 on lots of elements with -webkit-overflow-scrolling: touch
Simon Fraser (smfr)
Reported 2013-07-02 19:48:59 PDT
Don't set z-index: 0 on lots of elements with -webkit-overflow-scrolling: touch
Attachments
Patch (3.63 KB, patch)
2013-07-02 19:57 PDT, Simon Fraser (smfr)
benjamin: review+
Simon Fraser (smfr)
Comment 1 2013-07-02 19:57:09 PDT
Benjamin Poulain
Comment 2 2013-07-02 20:01:56 PDT
Comment on attachment 205964 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=205964&action=review > Source/WebCore/css/StyleResolver.cpp:1534 > + if ((isScrollableOverflow(style->overflowX()) || isScrollableOverflow(style->overflowY())) && style->useTouchOverflowScrolling()) Can you move style->useTouchOverflowScrolling() to be the first condition? (for readability).
Simon Fraser (smfr)
Comment 3 2013-07-02 20:22:24 PDT
Daniel Bates
Comment 4 2013-07-24 14:53:07 PDT
(In reply to comment #3) > http://trac.webkit.org/changeset/152335 This regressed both the rendering and the ability to scroll on <http://www.apple.com/mac-pro/index1.html>. See bug #119066 for more details.
Note You need to log in before you can comment on or make changes to this bug.