Don't set z-index: 0 on lots of elements with -webkit-overflow-scrolling: touch https://bugs.webkit.org/show_bug.cgi?id=118337

Reviewed by Benjamin Poulain.

-webkit-overflow-scrolling: touch is an inherited property that, on iOS, controls
the behavior of overflow scrolling content, and causes overflow scrolling elements
to become CSS stacking contexts.

However, the code was too aggressive in setting style->setZIndex(0), doing so
for any element with overflow != hidden. Since the default for overflow is visible,
that meant almost every element.

Previously, this didn't really matter. However, since r125693, any renderer with non-auto
z-index gets a RenderLayer, and that RenderLayer will become a stacking context. The result
was too many RenderLayers and incorrect stacking context behavior.

Fix by ensuring that -webkit-overflow-scrolling: touch  only affects elements which
are actually scrollable.

Also move the code that does this to below the code that adjust overflow style
for different elements.

* css/StyleResolver.cpp:
(WebCore::isScrollableOverflow):
(WebCore::StyleResolver::adjustRenderStyle):

Canonical link: https://commits.webkit.org/136346@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@152335 268f45cc-cd09-0410-ab3c-d52691b4dbfc